cleanup roadmap, fix arrows and number of slides on tablet

--- a/app/assets/stylesheets/homepage/_roadmap.scss
+++ b/app/assets/stylesheets/homepage/_roadmap.scss
@@ -7,21 +7,18 @@ section.roadmap {
   background: #F6FBFF image-url("roadmap_bg_mobile@2x.png");
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 40px 0 0 0;
-
+  padding: 40px 0 0;
   @media(min-width: $medium) {
     padding: 70px 0;
   }
   @media(min-width: $large) {
-    padding: 150px 0 120px 0;
+    padding: 120px 0 120px;
     background: #F6FBFF image-url("roadmap_bg_desktop.png");
     background-size: cover;
-
   }
 
   h2 {
     color: var(--h2-secondary-color);
-
     @media(min-width: $medium) {
       display: flex;
       justify-content: center;
@@ -29,13 +26,13 @@ section.roadmap {
     @media(min-width: $large) {
       margin-bottom: 40px;
     }
+
     img {
       @media(min-width: $large) {
         height: 48px;
       }
     }
   }
-
 
   h4 {
     font-size: 21px;
@@ -141,7 +138,6 @@ section.roadmap {
 
   .roadmap-container-desktop {
     display: none;
-
     @media(min-width: $medium) {
       display: block;
       padding-bottom: 50px;
@@ -151,7 +147,7 @@ section.roadmap {
       list-style-type: disc;
       padding-left: 18px;
       color: var(--paragraph-secondary-color);
-      margin-top:20px;
+      margin-top: 20px;
       color: #fff;
       line-height: 1.2;
 
@@ -166,7 +162,7 @@ section.roadmap {
     }
 
     .slick-slide {
-      margin: 10px 10px;
+      margin: 10px;
       padding: 30px;
     }
 
@@ -204,13 +200,16 @@ section.roadmap {
     }
 
     .slick-prev {
-      left: 45.5%;
-      bottom: -15%;
-      top:auto;
+      left: calc(45% - 41px);
+      bottom: -21%;
+      top: auto;
       z-index: 100;
       width: 41px;
       height: 22px;
       background: image-url("roadmap_arrow_left.svg");
+      @media(min-width:$large) {
+        left: calc(50% - 41px);;
+      }
 
       &:before {
         content: '';
@@ -219,13 +218,16 @@ section.roadmap {
     }
 
     .slick-next {
-      right: 45.5%;
-      bottom: -15%;
-      top:auto;
+      right: calc(49% - 40px);
+      bottom: -21%;
+      top: auto;
       z-index: 100;
       width: 41px;
       height: 22px;
       background: image-url("roadmap_arrow_right.svg");
+      @media(min-width:$large) {
+        left: calc(57% - 41px);
+      }
 
       &:before {
         content: '';
